# ArmoniK.Spec

./: .gitignore  Makefile  README.md  acdag.py  acdag_old.py  install.sh  manifest.json  manifest.yaml  pyproject.toml  requirements.txt  tla.py  todo
.docs/: modeling.md
.github/workflows/: ci.yaml
cli/: cli.py  constants.py  exceptions.py  models.py  utils.py
cli/tools/: __init__.py  base.py  java.py  repl.py  sany.py  (+2 more)
modules/: GraphsExt.tla  GraphsExtTests.tla  build.xml  logging.properties
notebooks/: ProveTaskProcessing.ipynb
scripts/: check_proofs_sync.py  install-tools.sh
specs/: AKGraphs.tla  ArmoniK.cfg  ArmoniK.tla  DDGraphTheorems.tla  DDGraphTheorems_proofs.tla  DDGraphs.java  DDGraphs.tla  DDGraphsTests.cfg  DDGraphsTests.tla  DenumerableSetTheorems.tla  DenumerableSetTheorems_proofs.tla  DenumerableSets.tla  DiGraphTheorems.tla  DiGraphTheorems_proofs.tla  DiGraphs.tla  DiGraphsTests.cfg  DiGraphsTests.tla  FiniteSetsExt.tla  GraphProcessing.tla  GraphProcessing1.tla  GraphProcessing1Theorems.tla  GraphProcessing1_mc.cfg  GraphProcessing1_mc.tla  GraphProcessing1_pb.tla  GraphProcessing1_proofs.tla  GraphProcessing2.tla  GraphProcessing2_mc.cfg  GraphProcessing2_mc.tla  GraphProcessing2_proofs.tla  GraphProcessing3.tla  GraphProcessing3_mc.cfg  GraphProcessing3_mc.tla  GraphProcessingExt.tla  GraphProcessing_mc.cfg  GraphProcessing_mc.tla  GraphProcessing_proof.tla  Graphs.tla  MCGraphProcessing.tla  MCGraphProcessing_small.cfg  MCObjectProcessing.cfg  (+98 more)
src/: Network.tla  TaskAllocation.cfg  TaskAllocation.tla
tests/: test_check_proofs_sync.py
(+5 files in other folders)
